--- a/.eslintrc
+++ b/.eslintrc
@@ -23,5 +23,18 @@
     "Blob": true,
     "navigator": true,
     "import": true
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {
+        "alias": {
+          "components": "./src/components",
+          "containers": "./src/containers",
+          "store": "./src/store",
+          "views": "./src/views",
+          "utils": "./src/utils"
+        }
+      }
+    }
   }
 }
