--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
   ],
   "devDependencies": {
     "babel-eslint": "10.0.1",
+    "babel-plugin-module-resolver": "3.1.1",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "3.3.0",
+    "eslint-import-resolver-babel-module": "4.0.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
