--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.6.3",
     "react-helmet": "5.2.0",
     "react-redux": "5.1.1",
+    "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.1",
     "redux": "4.0.1",
