--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
         "alias": {
           "components": "./src/components",
           "containers": "./src/containers",
+          "routes": "./src/routes",
           "config": "./src/config",
           "store": "./src/store",
           "views": "./src/views",
