--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "craco-less": "1.0.4",
     "jwt-decode": "2.2.0",
     "lodash": "4.17.11",
+    "moment": "2.23.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "5.2.0",
