feat(profile): add deleting an education or experience record

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,9 @@
     "Blob": true,
     "navigator": true,
     "import": true,
-    "fetch": true
+    "fetch": true,
+    "dispatchEvent": true,
+    "CustomEvent": true
   },
   "settings": {
     "import/resolver": {
