feat(app): add with-error hoc

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
         "alias": {
           "components": "./src/components",
           "containers": "./src/containers",
+          "hoc": "./src/hoc",
           "routes": "./src/routes",
           "config": "./src/config",
           "store": "./src/store",
